tests/performance-test/manifest/app.yaml
# Application Deployment with kyverno-envoy-plugin and Envoy sidecars.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
        - name: test-application
          image: sanskardevops/test-application:0.0.1
          ports:
            - containerPort: 8080
--- 
### Service to expose sample application
apiVersion: v1
kind: Service
metadata:
  name: testapp
  namespace: demo
spec:
  type: NodePort
  selector:
    app: testapp
  ports:
  - port: 8080
    targetPort: 8080
